--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <head><title>Index</title></head>
 <body>
 <center>
-<h1>Welcome<br>
-<h4>
-<p style="border: solid black thin">
-<a href="login.html">Login</a><br>
-<a href="createaccount.html">Create account</a>
-<br>
-</p>
+<div style="border: thin black solid; position: absolute; top:15%; left:50%; transform: translate(-50%,-50%); background-color: lightblue; padding:15; padding-top:0">
+<h1>Welcome to The Banco</h1>
+		<a href="login.html" style="border: thin black solid; background-color: aqua; padding:3"><b>Login</b></a>
+		<a href="http://localhost:8080/JSPfiles/BankApp/createaccount.html" style="border: thin black solid; background-color: aqua;margin-left: 10; padding:3"><b>Create account</b></a>
+</div>
 </body>
 </html>
