--- a/login.html
+++ b/login.html
@@ -27,12 +27,12 @@
 <head><title>Login</title></head>
 <body>
 <h4>
-<form action="http://localhost:8080/JSPfiles/BankApp/login.jsp" onsubmit="return checkform()" method="post" style="border: thin black solid; position: absolute; top:25%; left:50%; transform:translate(-50%,-50%); padding:10">
+<form action="http://localhost:8080/JSPfiles/BankApp/login.jsp" onsubmit="return checkform()" method="post" style="border: thin black solid; position: absolute; top:10%; left:50%; transform:translate(-50%,-50%); padding:10; background-color: lightblue">
 <center>
-Username <input type="text" name="username" style="border: thin black solid"><br><span id="n1" style="color:red; visibility:hidden;font-size:small"></span><br>
-Password <input type="Password" name="password" style="border: thin black solid"><br><span id ="p1" style="color:red; visibility:hidden;font-size:small"></span><br></center>
-<a href="createaccount.html">Create account</a>
-<input type="submit" style="float: right">
+Username <input type="text" name="username" style="border: thin black solid; background-color: aqua"><br><span id="n1" style="color:red; visibility:hidden; font-size:small"></span><br>
+Password <input type="Password" name="password" style="border: thin black solid; background-color: aqua"><br><span id ="p1" style="color:red; visibility:hidden;font-size:small"></span><br></center>
+<a href="createaccount.html" style="float: left; border: thin black solid; background-color: aqua">Create account</a>
+<input type="submit" style="float: right; border: thin black solid; background-color: aqua">
 </form>
 </h4>
 
